--- a/divisible.ipynb
+++ b/divisible.ipynb
@@ -86,7 +86,7 @@
         "id": "H_taI6CcDf8M",
         "outputId": "73e769a9-c86f-4cff-a0f1-0ad9bee49443"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,8 +112,7 @@
         "if a%7==0:\n",
         "  print(\"number is divisible by 7\")\n",
         "else:\n",
-        "  print(\"number is not divisible by any number\")\n",
-        ""
+        "  print(\"number is not divisible by any number\")\n"
       ],
       "metadata": {
         "id": "vDzeaQx66ukC"
@@ -166,8 +165,7 @@
         "elif a==10:\n",
         "    print(\"ten\")\n",
         "else:\n",
-        "  print(\"invalid output\")\n",
-        ""
+        "  print(\"invalid output\")\n"
       ],
       "metadata": {
         "colab": {
@@ -176,7 +174,7 @@
         "id": "E0WJydIL6Mq3",
         "outputId": "ec51cd78-986d-466d-c370-627f265b2d2c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
